[aliases]
test=pytest

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203
exclude =
  doc,
  __init__.py,
  tests/.tests

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
# This exclusion (which can only have one value, a regex) applies when running mypy
# from the command line (e.g. `mypy .`), but not when running it via pytest.
# Add matching ignores to addopts in [tool:pytest].
# Exclude version.py because the scons-generated version fails mypy.
exclude = version\.py

[mypy-lsst.*]
# Work around problems from mypy not knowing what type __path__ is
# and DM using __path__ in python/lsst/__init__.py files.
# This will probaby be fixed by https://github.com/python/mypy/issues/1422
ignore_errors = True

[tool:pytest]
addopts = --flake8 --black --mypy --ignore-glob=*/version.py
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203

[metadata]
version = attr: setuptools_scm.get_version
